# EduPro_Demographics

./: README.md
EduPro_Demographics/: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
EduPro_Demographics/.streamlit/: config.toml
EduPro_Demographics/api/: __init__.py
EduPro_Demographics/data/: users.xlsx
EduPro_Demographics/docs/: deployment.md  developer_guide.md  installation.md
EduPro_Demographics/src/: __init__.py  ab_testing.py  analysis.py  auth.py  comparison.py  config.py  dashboard.py  data_loader.py  db_connector.py  email_scheduler.py  export.py  geo_analysis.py  logger.py  pdf_report.py  preprocessing.py  streaming.py  utils.py  validator.py  visualization.py
EduPro_Demographics/streamlit_app/: __init__.py  app.py  requirements.txt
EduPro_Demographics/streamlit_app/components/: __init__.py
EduPro_Demographics/streamlit_app/pages/: 01_📋_Overview.py  02_📅_Age_Analysis.py  03_👥_Gender_Analysis.py  04_📧_Email_Analysis.py  05_📈_KPIs.py  06_📊_Charts.py  07_🔍_Data_Explorer.py  08_💡_Insights.py  09_📥_Downloads.py
EduPro_Demographics/tests/: __init__.py  test_analysis.py  test_data_loader.py  test_preprocessing.py  test_validator.py
