[project]
name = "edupro-demographics"
version = "1.0.0"
description = "EduPro Learner Demographics Analytics Dashboard — Industry-grade BI application for analyzing learner demographics."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EduPro Analytics Team"}
]
keywords = ["analytics", "dashboard", "streamlit", "education", "demographics"]

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "streamlit>=1.38.0",
    "openpyxl>=3.1.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.13.0",
    "tabulate>=0.9.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "xlsxwriter>=3.2.0",
    "fpdf2>=2.8.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "streamlit_app", "api"]

